--- a/ipa325_kms40/launch/config.yaml
+++ b/ipa325_kms40/launch/config.yaml
@@ -1,3 +1,6 @@
 IP_address: "192.168.1.30"
 port: "1000"
 dummyMode: false
+
+parentFrame: "tool"
+transformParent2Sensor: [1.1, 2.2, 3.3, 1.5, 0, 0]
