--- a/ipa325_kms40/CMakeLists.txt
+++ b/ipa325_kms40/CMakeLists.txt
@@ -37,6 +37,9 @@ rosbuild_add_executable(Kms40Driver src/Kms40Driver.cpp ${MYHEADERS} ${MYACTIONS
 
 rosbuild_add_executable(MarkerPublisher src/MarkerPublisher.cpp ${MYHEADERS} ${MYACTIONS} ${MYXML} ${MYLAUNCH} ${MYYAML} ${MYMSGS})
 
+rosbuild_add_executable(WrenchTransformer src/WrenchTransformer.cpp ${MYHEADERS} ${MYACTIONS} ${MYXML} ${MYLAUNCH} ${MYYAML} ${MYMSGS})
+target_link_libraries(WrenchTransformer tf)
+
 #adding boost linking
 rosbuild_link_boost(Kms40Driver iostreams system)
 
