--- a/ipa325_kms40_emulator/plugin.xml
+++ b/ipa325_kms40_emulator/plugin.xml
@@ -12,7 +12,7 @@
         <label>Subgroup</label>
       </group>
       -->
-      <label>AAAAAAAAAA kms40_emulator</label>
+      <label>ipa325_kms40_emulator</label>
       <icon type="theme">system-help</icon>
       <statustip>Great user interface to provide real value.</statustip>
     </qtgui>
