FIX: catkin problems

--- a/ipa325_kms40_emulator/CMakeLists.txt
+++ b/ipa325_kms40_emulator/CMakeLists.txt
@@ -147,11 +147,11 @@ install(PROGRAMS scripts/ipa325_kms40_emulator
 # )
 
 ## Mark other files for installation (e.g. launch and bag files, etc.)
-# install(FILES
-#   # myfile1
-#   # myfile2
-#   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
-# )
+install(FILES
+  plugin.xml
+  # myfile2
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+)
 
 #############
 ## Testing ##
