--- a/weiss_kms40/CMakeLists.txt
+++ b/weiss_kms40/CMakeLists.txt
@@ -1,47 +1,23 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(ipa325_kms40_emulator)
+project(weiss_kms40)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-find_package(catkin REQUIRED COMPONENTS
-  rospy
-  rqt_gui
-  rqt_gui_py
-)
+find_package(catkin REQUIRED COMPONENTS geometry_msgs roscpp rospy std_msgs tf visualization_msgs)
 
 ## System dependencies are found with CMake's conventions
-# find_package(Boost REQUIRED COMPONENTS system)
+find_package(Boost REQUIRED COMPONENTS system iostreams thread)
 
 
 ## Uncomment this if the package has a setup.py. This macro ensures
 ## modules and global scripts declared therein get installed
 ## See http://ros.org/doc/api/catkin/html/user_guide/setup_dot_py.html
-catkin_python_setup()
+# catkin_python_setup()
 
-################################################
-## Declare ROS messages, services and actions ##
-################################################
-
-## To declare and build messages, services or actions from within this
-## package, follow these steps:
-## * Let MSG_DEP_SET be the set of packages whose message types you use in
-##   your messages/services/actions (e.g. std_msgs, actionlib_msgs, ...).
-## * In the file package.xml:
-##   * add a build_depend and a run_depend tag for each package in MSG_DEP_SET
-##   * If MSG_DEP_SET isn't empty the following dependencies might have been
-##     pulled in transitively but can be declared for certainty nonetheless:
-##     * add a build_depend tag for "message_generation"
-##     * add a run_depend tag for "message_runtime"
-## * In this file (CMakeLists.txt):
-##   * add "message_generation" and every package in MSG_DEP_SET to
-##     find_package(catkin REQUIRED COMPONENTS ...)
-##   * add "message_runtime" and every package in MSG_DEP_SET to
-##     catkin_package(CATKIN_DEPENDS ...)
-##   * uncomment the add_*_files sections below as needed
-##     and list every .msg/.srv/.action file to be processed
-##   * uncomment the generate_messages entry below
-##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
+#######################################
+## Declare ROS messages and services ##
+#######################################
 
 ## Generate messages in the 'msg' folder
 # add_message_files(
@@ -57,17 +33,10 @@ catkin_python_setup()
 #   Service2.srv
 # )
 
-## Generate actions in the 'action' folder
-# add_action_files(
-#   FILES
-#   Action1.action
-#   Action2.action
-# )
-
 ## Generate added messages and services with any dependencies listed here
 # generate_messages(
 #   DEPENDENCIES
-#   std_msgs  # Or other packages containing msgs
+#   geometry_msgs#   std_msgs#   visualisation_msgs
 # )
 
 ###################################
@@ -81,9 +50,9 @@ catkin_python_setup()
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
 #  INCLUDE_DIRS include
-#  LIBRARIES rqt_kms_emulator
-#  CATKIN_DEPENDS rospy rqt_gui rqt_gui_py
-#  DEPENDS system_lib
+#  LIBRARIES weiss_kms40
+  CATKIN_DEPENDS geometry_msgs roscpp std_srvs
+  DEPENDS Boost
 )
 
 ###########
@@ -95,24 +64,27 @@ catkin_package(
 # include_directories(include)
 include_directories(
   ${catkin_INCLUDE_DIRS}
+  ${Boost_INCLUDE_DIRS}
 )
 
 ## Declare a cpp library
-# add_library(rqt_kms_emulator
-#   src/${PROJECT_NAME}/rqt_kms_emulator.cpp
+# add_library(weiss_kms40
+#   src/${PROJECT_NAME}/weiss_kms40.cpp
 # )
 
 ## Declare a cpp executable
-# add_executable(rqt_kms_emulator_node src/rqt_kms_emulator_node.cpp)
+add_executable(Kms40Driver src/Kms40Driver.cpp)
+set_target_properties(Kms40Driver PROPERTIES COMPILE_FLAGS "-std=c++11")
 
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
-# add_dependencies(rqt_kms_emulator_node rqt_kms_emulator_generate_messages_cpp)
+# add_dependencies(weiss_kms40_node weiss_kms40_generate_messages_cpp)
 
 ## Specify libraries to link a library or executable target against
-# target_link_libraries(rqt_kms_emulator_node
-#   ${catkin_LIBRARIES}
-# )
+target_link_libraries(Kms40Driver
+  ${catkin_LIBRARIES}
+  ${Boost_LIBRARIES}
+)
 
 #############
 ## Install ##
@@ -128,12 +100,8 @@ include_directories(
 #   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 # )
 
-install(PROGRAMS scripts/ipa325_kms40_emulator
-  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-)
-
 ## Mark executables and/or libraries for installation
-# install(TARGETS rqt_kms_emulator rqt_kms_emulator_node
+# install(TARGETS weiss_kms40 weiss_kms40_node
 #   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 #   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 #   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
@@ -147,18 +115,18 @@ install(PROGRAMS scripts/ipa325_kms40_emulator
 # )
 
 ## Mark other files for installation (e.g. launch and bag files, etc.)
-install(FILES
-  plugin.xml
-  # myfile2
-  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
-)
+# install(FILES
+#   # myfile1
+#   # myfile2
+#   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+# )
 
 #############
 ## Testing ##
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_rqt_kms_emulator.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_weiss_kms40.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
