--- a/weiss_kms40_emulator/package.xml
+++ b/weiss_kms40_emulator/package.xml
@@ -1,25 +1,25 @@
 <?xml version="1.0"?>
 <package>
-  <name>ipa325_kms40</name>
+  <name>weiss_kms40_emulator</name>
   <version>0.0.0</version>
-  <description>The ipa325_kms40 package</description>
+  <description>The weiss_kms40_emulator package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="lth@todo.todo">lth</maintainer>
+  <maintainer email="lorenz.halt@ipa.fraunhofer.de">Lorenz Halt</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
   <!-- Commonly used license strings: -->
   <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>TODO</license>
+  <license>MIT</license>
 
 
   <!-- Url tags are optional, but mutiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://ros.org/wiki/ipa325_kms40</url> -->
+  <!-- <url type="website">http://wiki.ros.org/rqt_kms_emulator</url> -->
 
 
   <!-- Author tags are optional, mutiple are allowed, one per tag -->
@@ -39,23 +39,20 @@
   <!--   <run_depend>message_runtime</run_depend> -->
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
-
   <buildtool_depend>catkin</buildtool_depend>
-
-  <build_depend>geometry_msgs</build_depend>
-  <build_depend>roscpp</build_depend>
-  <build_depend>std_srvs</build_depend>
-
-  <run_depend>geometry_msgs</run_depend>
-  <run_depend>roscpp</run_depend>
-  <run_depend>std_srvs</run_depend>
+  <build_depend>rospy</build_depend>
+  <build_depend>rqt_gui</build_depend>
+  <build_depend>rqt_gui_py</build_depend>
+  <run_depend>rospy</run_depend>
+  <run_depend>rqt_gui</run_depend>
+  <run_depend>rqt_gui_py</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- You can specify that this package is a metapackage here: -->
     <!-- <metapackage/> -->
-
+    <rqt_gui plugin="${prefix}/plugin.xml"/>
     <!-- Other tools can request additional information be placed here -->
 
   </export>
